# ai-spam-email-analysis-poc

./: .env.example  .gitignore  README.md  heuristics.py  llm.py  mail_analyzer.py  main.py  pyproject.toml  requirements.txt  url_extractor.py  virustotal_api.py
src/spam_email_poc/: ai_analyzer.py  analyze.py  cli.py  email_parser.py  mail_sender.py  models.py  test_mail.py  watch_and_analyze.py
templates/: index.html
